# open-quant-company

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOTICE  README.en.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  daily-scan.yml  release.yml  security.yml
agent_os/: __init__.py  approval.py  context.py  desks.py  evidence.py  ledger.py  llm_transport.py  notifications.py  reports.py  response_synthesizer.py  router.py  runtime.py  schemas.py  semantic_planner.py  tool_planner.py  tool_result_context.py  tools.py  validation.py  workflows.py
astrolabe_cli/: __init__.py  ast_intelligence.py  design_intelligence.py  graph_payload.py  main.py  results.py  safety.py
astrolabe_cli/commands/: agent.py  architecture.py  assets.py  backtest.py  config.py  data.py  docs.py  execution.py  health.py  lifecycle.py  pipeline.py  regime.py  strategy.py  test_system.py  web.py
backtest/: __init__.py  analytics.py  buffett_real_scorer.py  buffett_rolling.py  candidate_alpha.py  candidate_alpha_features.py  candidate_alpha_scorers.py  data_readiness.py  momentum.py  monthly.py  pipeline.py  pipeline_runner.py  regime_replay.py  rolling.py  run_all_strategies.py  run_buffett_cyber.py  run_cybernetic.py  run_ma_cross.py  strategy_scorers.py
backtest/strategies/: __init__.py  base.py  buffett_cyber.py  cybernetic.py  ma_cross.py  ml_strategy.py  multifactor.py
broker/: __init__.py  allocator.py  base.py  exchange.py  fill_models.py  ledger.py  matcher.py  models.py  numeric.py  order_sm.py  paper.py  paper_core.py  paper_orders.py  paper_state.py  persistence.py  risk.py  state.py
broker/live/: __init__.py  qmt.py  registry.py  xtquant_gateway.py
buffett/: __init__.py  filters.py
config/: notify.example.yaml  settings.yaml  test_system.yaml
config/workflows/: factor_discovery.yaml  research_pipeline.yaml
core/: __init__.py  env_secrets.py  settings.py
cybernetics/: __init__.py  adaptive_params.py  config.py  features.py  hmm_engine.py  hybrid_decision.py  market_observations.py  orchestrator.py  regime.py  regime_policy.py  regime_scoring.py  regime_state.py  types.py
cybernetics/hmm/: __init__.py  core.py  io.py  preprocessing.py
cybernetics/observations/: __init__.py  breadth.py  hmm_detection.py  (+4 more)
data/: __init__.py  audit.py  backfill.py  cleaner.py  contract.py  corporate_actions.py  cron_logger.py  data_registry.py  datahub.py  datahub_dimensions.py  datahub_manifest.py  datahub_parquet.py  datahub_paths.py  db.py  deepseek_usage.py  factor_scoreboard.py  feature_store.py  fetcher.py  financials.py  freshness_gate.py  industry.py  llm_usage.py  market_data_view.py  price_service.py  price_types.py  provider.py  quality.py  registry.py  results_db.py  risk_free_rates.py  sectors.py  strategy_plugins.py  symbol_utils.py  symbols.py  tushare_ind.json  tushare_industry.json  tushare_utils.py  universe_raw.json
docs/: DOCUMENTATION.md  PRD.md  acceptance-matrix.md  development-plan.md  multi-asset-plan.md  tushare-mcp-guide.md
models/: __init__.py  lgbm_runtime.py
notify/: __init__.py
pipeline/: __init__.py  alpha.py  execution.py  portfolio.py  risk.py  scheduler.py  types.py
research/: __init__.py  forward_labels.py  performance.py  regime_training.py  regime_types.py  runs.py  strategy_catalog.py  strategy_competition.py  strategy_data_coverage.py  strategy_evaluation.py  strategy_governance.py
scripts/: ast_frontend_collector.mjs  batch_fetch_financials.py  build_features.py  build_sector_snapshots.py  build_universe.py  bump_version.py  cache_all_data.py  cleanup_cache.py  collect_hindsight_tokens.py  collect_system_metrics.py  compute_signals.py  cron_fetch_daily.py  cron_fetch_extra.py  cron_fetch_financials.py  cron_fetch_ohlcv.py  cron_fetch_slow.py  db_health_check.py  enrich_pe_pb.py  execute_paper_trades.py  factor_hypothesis.py  fetch_moneyflow_full.py  ingest_deepseek_cdp.py  ingest_deepseek_usage.py  lookahead_check.py  migrate_data_layout.py  multi_asset_tournament.py  precache_financials.py  pull_industry.py  rebuild_missing_months.py  repair_table.py  run_workflow.py  scan_all.py  start_hindsight_9177.py  start_hindsight_daemon.py  strategy_tournament.py  train_market_regime.py  train_market_regime_profit.py  train_regime_hmm.py  train_regime_models.py  tune_model.py  (+2 more)
signals/: __init__.py  buffett.py  dsl_parser.py  expression.py  factor_research.py  factors.py  ml_signals.py  multifactor.py  regime_context.py  runners.py  scoring.py  selection.py  technical.py  tradability.py
tests/: conftest.py  market_helpers.py  run_all.py  test_agent_os_contracts.py  test_api_services.py  test_architecture_contracts.py  test_asof_pit_feature_view.py  test_asset_contracts.py  test_ast_intelligence.py  test_audit.py  test_auth.py  test_backfill.py  test_backtest_pipeline_contracts.py  test_backtest_pipeline_runner_contracts.py  test_backtest_pit_contracts.py  test_backtest_reproducibility.py  test_boundary.py  test_broker_risk_persistence_allocator.py  test_buffett_financial_sector.py  test_candidate_strategy_contracts.py  test_ceo_office_frontend_contracts.py  test_cli_data_commands.py  test_cli_foundation.py  test_cli_ops_commands.py  test_cli_strategy_commands.py  test_codegraph_contracts.py  test_contract.py  test_cron_logger_contracts.py  test_data_cleaner_contracts.py  test_data_fetcher_resilience.py  test_data_layout_contracts.py  test_data_source_capabilities.py  test_datahub_contracts.py  test_documentation_contracts.py  test_env_secret_contracts.py  test_execution_observability.py  test_factor_gate.py  test_fill_models.py  test_frontend_i18n_contracts.py  test_hindsight_contracts.py  (+40 more)
web/: api.py  app.py  index.html
wiki/: SCHEMA.md  index.md  log.md
(+591 files in other folders)
