[project]
name = "quant-agent"
version = "2.0.0"
description = "个人A股量化AI — 巴菲特价值投资 + 钱学森控制论"
requires-python = ">=3.11"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "akshare>=1.18.0",
    "tushare>=1.4.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "requests>=2.31",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "websocket-client>=1.8.0",
    "scipy>=1.11",
    "psutil>=5.9",
]

[project.optional-dependencies]
ml = ["lightgbm>=4.0", "scikit-learn>=1.3", "optuna>=3.0"]
dev = ["pytest>=8.0", "pytest-xdist>=3.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "backtest*",
    "broker*",
    "cybernetics*",
    "data*",
    "models*",
    "notify*",
    "research*",
    "scripts*",
    "signals*",
    "web*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
