[project]
name = "astrolabe-quant"
version = "2.0.0"
description = "星盘 / Astrolabe Quant OS：个人量化研究与执行操作系统"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "RainbowLion0320" },
]
keywords = [
    "quant",
    "trading",
    "backtesting",
    "a-share",
    "fastapi",
    "vue",
    "cli",
    "local-first",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "akshare>=1.18.0",
    "tushare>=1.4.0",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "requests>=2.31",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "scipy>=1.11",
    "psutil>=5.9",
]

[project.scripts]
astroq = "astrolabe_cli.main:main"

[project.urls]
Homepage = "https://github.com/RainbowLion0320/astrolabe-quant"
Documentation = "https://github.com/RainbowLion0320/astrolabe-quant/tree/main/docs"
Repository = "https://github.com/RainbowLion0320/astrolabe-quant"
Issues = "https://github.com/RainbowLion0320/astrolabe-quant/issues"

[project.optional-dependencies]
ml = ["lightgbm>=4.0", "scikit-learn>=1.3", "optuna>=3.0"]
dev = ["pytest>=8.0", "pytest-xdist>=3.0", "pytest-asyncio>=0.24", "flake8>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "astrolabe_cli*",
    "backtest*",
    "broker*",
    "core*",
    "cybernetics*",
    "data*",
    "models*",
    "notify*",
    "pipeline*",
    "research*",
    "scripts*",
    "signals*",
    "web*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "var",
    "web/frontend/node_modules",
    "web/frontend/dist",
    ".codegraph",
]

[tool.ruff.lint]
# Keep the default CI gate conservative for now: syntax, invalid constructs,
# control-flow errors, and undefined names. Broader style enforcement can be
# enabled once the historical codebase has been cleaned intentionally.
select = ["E9", "F63", "F7", "F82"]
